--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -60,3 +60,19 @@ a {
   min-height: 100vh;
   background-color: rgb(41, 44, 59);
 }
+
+.register-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: rgb(41, 44, 59);
+}
+
+.register-button {
+  width: 100%;
+}
+
+.router-button {
+  width: 100%;
+}
