--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -73,6 +73,18 @@ a {
   width: 100%;
 }
 
+.edit-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: rgb(41, 44, 59);
+}
+
+.edit-button {
+  width: 100%;
+}
+
 .router-button {
   width: 100%;
 }
